# katarive

./: .gitignore  Cargo.toml  Makefile  README.md  styles.css
proto/v1/: fetcher.proto  speaker.proto
shared/src/: document.rs  lib.rs  sidecar.rs  speaker.rs
sidecars/fetcher/echo_fetcher/: Cargo.toml  build.rs
sidecars/fetcher/echo_fetcher/src/: fetcher.rs  main.rs
src/: app.rs  main.rs  tauri.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: fetcher_manager.rs  lib.rs  main.rs  pb.rs  sidecar.rs  speaker_manager.rs  state.rs
src-tauri/src/commands/: fetcher.rs  mod.rs  speaker.rs
src/components/: error_bar.rs  footer.rs  header.rs  mod.rs
