[package]
name = "echo_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../../../shared" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"

[build-dependencies]
tonic-prost-build = "0.14.3"
